20210403:
  * [gfursin] fixed TFLite packages 1.13, 1.14 and 1.15 (eigen library).
     https://github.com/ctuning/ck/issues/138
     https://github.com/ctuning/ck/issues/139

20210324:
  * [sztaylor] fix cpu & gpu set_freq commands

20210226: 
  * improvements from Arm to 2 CK modules: platform.cpu and platform.gpu:
    https://github.com/ctuning/ck-env/pull/113