@@ -1,3 +1,7 @@
+20210416:
+  * [gfursin] extended module:package to ask a user to select a variation 
+    for a given package when there are multiple versions available.
+
 20210403:
   * [gfursin] fixed TFLite packages 1.13, 1.14 and 1.15 (eigen library).
      https://github.com/ctuning/ck/issues/138
